Tablet is no longer a static texture, started work on adding pages

--- a/3dash_fstablet/html_ui/InGamePanels/FSTablet/Settings.html
+++ b/3dash_fstablet/html_ui/InGamePanels/FSTablet/Settings.html
@@ -31,38 +31,8 @@
                     <p id="time_provider">15:00 FSTablet</p>
                 </div>
                 <div class="tablet-body">
-                    <a id="appIcon" style="margin-left: 50px;">
-                        <img src="Icons/Services.png">
-                        Services
-                    </a>
-                    <a id="appIcon" href="Settings.html">
-                        <img src="Icons/Settings.png">
-                        Settings
-                    </a>
-                    <a id="appIcon">
-                        <img src="Icons/Charts.png">
-                        Charts
-                    </a>
-                    <a id="appIcon">
-                        <img src="Icons/Database.png">
-                        Database
-                    </a>
-                    <a id="appIcon">
-                        <img src="Icons/Services.png">
-                        Map
-                    </a>
-                    <a id="appIcon" style="margin-left: 50px;">
-                        <img src="Icons/Flight Plan.png">
-                        Flight Plan
-                    </a>
-                    <a id="appIcon">
-                        <img src="Icons/PDFs.png">
-                        PDF's
-                    </a>
-                    <a id="appIcon">
-                        <img src="Icons/Checklist.png">
-                        Checklist
-                    </a>
+                    <h1>Settings</h1>
+                    <p>Oops! Looks like this page isnt done yet.</p>
                 </div>
                 <div class="system-controls">
                     <a href="FSTablet.html"><img src="UI Elements/Home_Button.png"></a>
